--- a/index.html
+++ b/index.html
@@ -7,43 +7,106 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Добродрев</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/normalize.css">
 </head>
 
 <body>
-    <div class="main_wrapper">
-        <header class="header">
-            <div class="header_menu">
-                <div class="header_menu_info_wrap">
-                    <ul class="header_menu_info">
-                        <li class="header_menu_info-item">О нас</li>
-                        <li class="header_menu_info-item active">Каталог</li>
-                        <li class="header_menu_info-item">Услуги</li>
-                        <li class="header_menu_info-item">Вопрос-ответ</li>
-                    </ul>
-                </div>
-                <div class="header_logo">
-                    <img src="src/img/logo_drev.png" alt="logo">
-                    <h2 class="header_logo_subtitle">Добродрев</h2>
-                </div>
-                <div class="header_menu_news_wrap">
-                    <ul class="header_menu_news">
-                        <li class="header_menu_news_item">Новости</li>
-                        <li class="header_menu_news_item active">Мебель по помещениям</li>
-                        <li class="header_menu_news_item">Доставка</li>
-                        <li class="header_menu_news_item">контакты</li>
-                    </ul>
-                    <div class="header_icon">
-                        <img src="" alt="">
-                        <img src="" alt="">
+    <!-- HEADER -->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            <header class="header">
+                <div class="header_menu">
+                    <div class="header_menu_info_wrap">
+                        <ul class="header_menu_info">
+                            <li class="header_menu_info-item">О нас</li>
+                            <li class="header_menu_info-item active">Каталог</li>
+                            <li class="header_menu_info-item">Услуги</li>
+                            <li class="header_menu_info-item">Вопрос-ответ</li>
+                        </ul>
                     </div>
+                    <div class="header_logo">
+                        <img src="src/img/logo_drev.png" alt="logo">
+                        <h2 class="header_logo_subtitle">Добродрев</h2>
+                    </div>
+                    <div class="header_menu_news_wrap">
+                        <ul class="header_menu_news">
+                            <li class="header_menu_news_item">Новости</li>
+                            <li class="header_menu_news_item active">Мебель по помещениям</li>
+                            <li class="header_menu_news_item">Доставка</li>
+                            <li class="header_menu_news_item">контакты</li>
+                        </ul>
+                        <div class="header_icon">
+                            <img src="" alt="">
+                            <img src="" alt="">
+                        </div>
+                    </div>
+
                 </div>
+        </div>
 
-            </div>
-    </div>
+        </header>
+        </div>
+    </section>
+    <!-- HEADER -->
+
+    <!-- Banner -->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            Banner
+        </div>
+    </section>
+    <!--/ Banner -->
+
+    <!-- About us -->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            About
+        </div>
+    </section>
+    <!-- /About us -->
+
+    <!-- Bestseller-->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            Bestseller
+        </div>
+    </section>
+    <!-- Bestseller -->
+
+    <!-- Zabota-->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            Zabota
+        </div>
+    </section>
+    <!--\ Zabota -->
 
 
-    </header>
-    </div>
+    <!-- bonus-->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            bonus
+        </div>
+    </section>
+    <!--\ bonus -->
+
+
+    <!-- gallery-->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            gallery
+        </div>
+    </section>
+    <!--\ gallery -->
+
+
+    <!-- footer-->
+    <section class="out-wrapper">
+        <div class="main_wrapper">
+            footer
+        </div>
+    </section>
+    <!--\ footer -->
 
 </body>
 
