--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="#">Услуги</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Вопрос-ответ</a></li>
+                            <a class="nav-menu__info-item-link" href="questions.html">Вопрос-ответ</a></li>
                     </ul>
                 </nav>
                 <div class="header_logo">
