list items toggle

--- a/questions.html
+++ b/questions.html
@@ -78,16 +78,30 @@
     <section class="out-wrapper section-head_questions">
         <div class="main_wrapper">
             <h1 class="section-head_questions">Вопрос-Ответ</h1>
-            <p class="section-head_about">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, natus corrupti! Harum, iusto iste nulla voluptatibus odio aspernatur itaque accusamus sed autem ipsam vitae corrupti tempora iure nam explicabo quod!</p>
-
+            <p class="section-head_about">В данной рубрике можно узнать ответы на самые популярные вопросы. В случае если вы не нашли необходимой информации, рекомендуем обратиться за помощью к нашим экспертам. Для этого посетите страницу контактов и воспользуйтесь формой обратной
+                связи. Консультация совершенно бесплатно и ни к чему вас не обязывает.</p>
         </div>
     </section>
     <!--/ questions head -->
 
     <!-- section-block -->
     <section class="out-wrapper section-block">
-        <div class="about__wrap">
-
+        <div class="main_wrapper">
+            <div class="quest_wrap">
+                <div class="quest_wrap_questions">КАК ДОЛГО ИЗГОТАВЛИВАЕТСЯ МЕБЕЛЬ ПО ИНДИВИДУАЛЬНОМУ ЗАКАЗУ?
+                    <div class="quest_wrap_questions_plus"></div>
+                </div>
+                <div class="quest_wrap_answer">СРОК ИЗГОТОВЛЕНИЯ ОТ 14 ДО 60 ДНЕЙ В ЗАВИСИМОСТИ ОТ СЛОЖНОСТИ ЗАКАЗА</div>
+                <div class="quest_wrap_questions">ЗАЧЕМ МНЕ МЕБЕЛЬ?</div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio accusantium laudantium voluptatem illo quisquam cum harum, debitis soluta nam enim reprehenderit eveniet unde totam sint, mollitia saepe adipisci, quo fugiat.</div>
+                <div class="quest_wrap_questions">КАКИЕ МАТЕРИАЛЫ ИСПОЛЬЗУЮТСЯ ПРИ ИЗГОТОВЛЕНИИ?</div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, omnis. Eligendi iusto, blanditiis pariatur soluta maiores recusandae. Harum officiis repudiandae unde aliquam facilis, magni ipsum provident voluptates nisi officia maxime.</div>
+                <div class="quest_wrap_questions">КАК ДОЛГО ДЛИТСЯ ДОСТАВКА?</div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minima velit nobis sint repudiandae officiis explicabo possimus ad accusamus? Asperiores, amet optio! Commodi reiciendis atque sunt autem, sequi exercitationem veritatis?</div>
+                <div class="quest_wrap_questions">КТО ГАРАНТИРУЕТ ИСПОЛНЕНИЕ ЗАКАЗА?</div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolores exercitationem cupiditate natus iure nisi est eum reprehenderit placeat adipisci itaque unde voluptates, ab, molestiae ut ipsa repellendus assumenda magnam. Earum
+                    eum deserunt, quas minima ad ab vero soluta maiores reprehenderit inventore. Id quis nemo dicta omnis, dolore maxime, amet quam iusto placeat ipsa nulla quidem minima ad, eum velit!</div>
+            </div>
         </div>
 
 
@@ -153,9 +167,10 @@
             </div>
         </div>
         <div class="developer"> Developed by Paul Sturmann © 2021 </div>
+
     </section>
     <!--\ footer -->
-
+    <script src="src/js/accord.js"></script>
 
 </body>
 
